<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- GENERAL -->
    <string name="app_name" translatable="false">Go4Lunch</string>

    <!-- FACEBOOK -->
    <string name="facebook_application_id" translatable="false">281477675880579</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb281477675880579
    </string>

    <!-- LOGIN -->
    <string name="login_subtitle">Find a nice restaurant and invite co-workers for lunch!</string>
    <string name="login_facebook_button">Sign in with Facebook</string>
    <string name="login_google_button">Sign in with Google</string>
    <string name="login_canceled">Connection failed</string>
    <string name="login_no_network">No internet connection</string>
    <string name="login_unknown_error">An unknown error has occurred</string>
    <string name="login_no_account_found_error">Impossible to retrieve your account</string>

    <!-- HOME -->
    <string name="home_map_view_title">Map View</string>
    <string name="home_list_view_title">List View</string>
    <string name="home_workmates_title">Workmates</string>
    <string name="home_toolbar_title">A bit hungry ?</string>
    <string name="my_lunch_no_lunch_selected">You haven\'t decided where to eat yet</string>

    <!-- WORKMATES -->
    <string name="workmates_has_lunch">%1$s is eating at %2$s</string>
    <string name="workmates_has_no_lunch">%1$s has not decided yet</string>

    <!-- DRAWER -->
    <string name="drawer_logout">LOGOUT</string>
    <string name="drawer_settings">SETTINGS</string>
    <string name="drawer_my_food">YOUR LUNCH</string>

    <!-- SETTINGS -->
    <string name="settings_activity_name">Settings</string>
    <string name="settings_delete_account_button">Delete my account</string>
    <string name="settings_delete_account_alert_dialog_title">Are you sure you want to do this ?</string>
    <string name="settings_delete_account_alert_dialog_message">All your data will be lost immediately.</string>
    <string name="settings_delete_account_alert_dialog_positive_button">Delete</string>
    <string name="settings_delete_account_alert_dialog_negative_button">Cancel</string>
    <string name="settings_delete_account_success_toast">Your account has been successfully deleted</string>
    <string name="settings_delete_account_success_but_no_logout">Your account has been successfully deleted but we
        can\'t log you out
    </string>
    <string name="settings_delete_account_error">Oops, we can\'t suppress your account by now. Your session might have
        expired.
    </string>

    <!-- RESTAURANT LIST -->
    <string name="restaurant_item_is_opened">Currently opened</string>
    <string name="restaurant_item_is_closed">Currently closed</string>
    <string name="restaurant_list_no_place_id_error">Sorry, we can\'t retrieve this restaurant for now</string>
    <string name="restaurant_item_workmates_number">(%1$d)</string>
    <string name="restaurant_item_permanently_closed">Permanently closed</string>
    <string name="restaurant_item_permanently_opened">Opened 24/7</string>
    <string name="restaurant_item_opening_start_text">Opens</string>
    <string name="restaurant_item_closing_start_text">Closes</string>
    <string name="restaurant_item_at_text">at $s</string>
    <string name="restaurant_item_monday">monday</string>
    <string name="restaurant_item_tuesday">tuesday</string>
    <string name="restaurant_item_wednesday">wednesday</string>
    <string name="restaurant_item_thursday">thursday</string>
    <string name="restaurant_item_friday">friday</string>
    <string name="restaurant_item_saturday">saturday</string>
    <string name="restaurant_item_sunday">sunday</string>

    <!-- RESTAURANT DETAILS-->
    <string name="detail_restaurant_call_button">call</string>
    <string name="detail_restaurant_like_button">Like</string>
    <string name="detail_restaurant_website_button">Website</string>
    <string name="detail_restaurant_toast_add_to_favorite">Add to favorite</string>
    <string name="detail_restaurant_toast_remove_from_favorite">Remove from favorite</string>
    <string name="detail_restaurant_workamtes_eating_there">%1$s is joining !</string>
    <string name="detail_restaurant_cannot_fetch_favorite_error">Impossible to retrieve your favorites restaurants</string>

    <!-- PERMISSION SCREEN -->
    <string name="permission_activity_title">Let\'s activate localisation to find great restaurants !</string>
    <string name="permission_activity_description">Go4Lunch is mainly based on geolocation, activate it to get fully
        access to the app.
    </string>
    <string name="permission_activity_granted_btn">OK got it</string>
    <string name="permission_activity_log_out_btn">Log me out</string>

    <!-- CHAT -->
    <string name="chat_input_hint">Send message..</string>

    <!-- IMAGE DESCRIPTIONS -->
    <string name="nav_header_image_profile_desc">Image profile</string>
    <string name="nav_header_app_logo_desc">Application logo</string>
    <string name="login_app_logo_desc">Application logo</string>
    <string name="restaurant_item_image_desc">Photo of the restaurant</string>
    <string name="workmates_chat_icon">chat icon</string>
    <string name="restaurant_item_number_of_workmates_description">Number of persons which lunch at the restaurant</string>

    <!-- MENU -->
    <string name="search_title">Search</string>
    <string name="search_hint">Search restaurants</string>
    <string name="search_locale">en</string>

    <!-- NOTIFICATION -->
    <string name="notification_title">Lunch Time</string>
    <string name="notification_content_without_coworkers">Let\'s go to %1$s at %2$s</string>
    <string name="notification_content_with_coworkers">Let\'s go to %1$s at %2$s with %3$s</string>
    <string name="notification_channel_title">Lunch notification</string>
    <string name="notification_channel_description">Remind you the restaurant you have chosen for this day</string>

    <!-- ERRORS -->
    <string name="profile_data_error">For some reasons, we can\'t fetch your profile data</string>
    <string name="session_expired_error">It seems your session has expired. Please try to reconnect.</string>
    <string name="logout_error">Sorry, the log out has failed</string>
    <string name="firebase_crud_error">An error has occurred while updating your data</string>
    <string name="save_user_id_failed">An error has occurred while saving your data. Please retry to login</string>
    <string name="settings_notification_switch">Notifications</string>

</resources>
