<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#69d07d"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.PermissionActivity">

        <LinearLayout
                android:id="@+id/contentView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="48dp"
                android:orientation="vertical"
        >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_activity_title"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="64dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_gravity="center_horizontal"
            />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location"
                    android:layout_marginTop="72dp"
                    android:layout_gravity="center_horizontal"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_activity_description"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginTop="72dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_gravity="center_horizontal"
            />

            <Button
                    android:id="@+id/permissionAgreeButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_activity_granted_btn"
                    android:textColor="@android:color/white"
                    android:background="@drawable/location_granted_button"
                    android:layout_marginTop="56dp"
                    android:layout_gravity="center_horizontal"
                    style="?android:attr/borderlessButtonStyle"
            />

            <Button
                    android:id="@+id/permissionLogoutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_activity_log_out_btn"
                    android:textSize="10sp"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center_horizontal"
                    style="?android:attr/borderlessButtonStyle"
            />
        </LinearLayout>
</ScrollView>