<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/restaurantItemContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
>

    <TextView
            android:id="@+id/restaurantItemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Le Zinc"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@id/restaurantImageCardView"
            app:layout_constraintStart_toEndOf="@id/startGuideline"
            app:layout_constraintEnd_toStartOf="@id/middleGuideline"
    />

    <TextView
            android:id="@+id/restaurantItemAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="12 rue du Faubourg Poisonnière"
            android:layout_marginEnd="8dp"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/restaurantItemTitle"
            app:layout_constraintBottom_toTopOf="@id/restaurantItemHours"
            app:layout_constraintStart_toEndOf="@id/startGuideline"
            app:layout_constraintEnd_toStartOf="@id/middleGuideline"
    />

    <TextView
            android:id="@+id/restaurantItemHours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/restaurant_item_is_opened"
            android:textStyle="italic"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="@id/restaurantImageCardView"
            app:layout_constraintStart_toEndOf="@id/startGuideline"
            app:layout_constraintEnd_toStartOf="@id/middleGuideline"
    />

    <TextView
            android:id="@+id/restaurantItemDistance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="120m"
            android:textColor="@color/lightGray"
            android:layout_marginEnd="4dp"
            app:layout_constraintStart_toEndOf="@id/middleGuideline"
            app:layout_constraintEnd_toStartOf="@id/restaurantImageCardView"
            app:layout_constraintTop_toTopOf="@id/restaurantItemTitle"
    />

    <LinearLayout
        android:id="@+id/restaurantItemWorkmatesNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/middleGuideline"
        app:layout_constraintTop_toBottomOf="@id/restaurantItemDistance"
        app:layout_constraintBottom_toTopOf="@id/restaurantItemRating"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/restaurant_item_number_of_workmates_description"
            android:src="@drawable/ic_person_black_24dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            tools:text="(3)"
            />
    </LinearLayout>

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/restaurantItemRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="3"
            tools:rating="2"
            android:clickable="false"
            app:mrb_fillBackgroundStars="true"
            app:mrb_progressTint="@color/yellowStar"
            app:mrb_indeterminateTint="@color/emptyStarColor"
            app:mrb_progressBackgroundTint="@color/emptyStarColor"
            style="@style/Widget.MaterialRatingBar.RatingBar.Small"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@id/restaurantImageCardView"
            app:layout_constraintStart_toEndOf="@id/middleGuideline"
    />

    <androidx.cardview.widget.CardView
            android:id="@+id/restaurantImageCardView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toStartOf="@id/endGuideline"
            app:layout_constraintTop_toTopOf="@id/restaurantItemTitle"
            app:layout_constraintBottom_toBottomOf="parent"
    >
        <ImageView
                android:id="@+id/restaurantItemImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:contentDescription="@string/restaurant_item_image_desc"
                tools:src="@drawable/back_rounded_workmate_message"
        />
    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideline"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideline"
            android:orientation="vertical"
            app:layout_constraintGuide_end="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middleGuideline"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>
