<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.detail.DetailRestaurantActivity">

    <!-- CONTENT VIEW -->
    <androidx.core.widget.NestedScrollView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".ui.detail.DetailRestaurantActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/detailRestaurantConstraintHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintTop_toTopOf="parent">
                <TextView
                        android:id="@+id/detailRestaurantName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="Le Tajmahal"
                        android:textSize="16sp"
                        android:textColor="@android:color/white"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="4dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/detailRestaurantRating"
                />

                <TextView
                        android:id="@+id/detailRestaurantAddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:ellipsize="end"
                        tools:text="24 rue du gaucher d'antibes"
                        android:textColor="@android:color/white"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/detailRestaurantName"
                />
                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                        android:id="@+id/detailRestaurantRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="3"
                        tools:rating="2"
                        android:clickable="false"
                        app:mrb_fillBackgroundStars="true"
                        app:mrb_progressTint="@color/yellowStar"
                        app:mrb_indeterminateTint="@color/emptyStarColor"
                        app:mrb_progressBackgroundTint="@color/emptyStarColor"
                        style="@style/Widget.MaterialRatingBar.RatingBar.Small"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toStartOf="@id/detailMiddleGuideline"
                        app:layout_constraintTop_toTopOf="@id/detailRestaurantName"
                />

                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/detailMiddleGuideline"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                    android:id="@+id/detailRestaurantButtonsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/detailRestaurantConstraintHeader">
                <Button
                        android:id="@+id/detailRestaurantCallButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/detail_restaurant_call_button"
                        android:textColor="@color/colorPrimary"
                        android:drawableTop="@drawable/ic_local_phone_color_accent_24dp"
                        android:background="@android:color/transparent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                />
                <Button
                        android:id="@+id/detailRestaurantLikeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/detail_restaurant_like_button"
                        android:textColor="@color/colorPrimary"
                        android:drawableTop="@drawable/ic_star_color_accent_24dp"
                        android:background="@android:color/transparent"
                        app:layout_constraintStart_toEndOf="@id/detailRestaurantCallButton"
                        app:layout_constraintTop_toTopOf="parent"
                />
                <Button
                        android:id="@+id/detailRestaurantWebButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/detail_restaurant_website_button"
                        android:textColor="@color/colorPrimary"
                        android:drawableTop="@drawable/ic_language_color_accent_24dp"
                        android:background="@android:color/transparent"
                        app:layout_constraintStart_toEndOf="@id/detailRestaurantLikeButton"
                        app:layout_constraintTop_toTopOf="parent"
                />
            </LinearLayout>
            <TextView
                    android:id="@+id/detailRestaurantDivider"
                    app:layout_constraintTop_toBottomOf="@id/detailRestaurantButtonsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/whiteDivider"
            />
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/detailRestaurantRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/detailRestaurantDivider"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- COLLAPSE TOOLBAR-->
    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/detailRestaurantAppBarLayout"
            android:minHeight="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.appbar.CollapsingToolbarLayout
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:layout_width="match_parent"
                app:contentScrim="@color/colorPrimary"
                android:layout_height="match_parent">
            <ImageView
                    android:id="@+id/detailRestaurantPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="225dp"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.5"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/detailRestaurantFabDisable"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_check_white_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_anchor="@id/detailRestaurantAppBarLayout"
            app:layout_anchorGravity="bottom|end"
    />

    <!-- FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/detailRestaurantFabEnable"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_check_white_24dp"
            android:backgroundTint="@color/fabActivated"
            app:backgroundTint="@color/fabActivated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:scaleX="0"
            android:scaleY="0"
            android:padding="8dp"
            app:layout_anchor="@id/detailRestaurantAppBarLayout"
            app:layout_anchorGravity="bottom|end"
    />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
